# fullstack-fastapi-vuejs-price-aggregator

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml
client/: .env  (+9 more)
server/: Dockerfile  alembic.ini  docker-entrypoint.sh  gunicorn_conf.py  manage.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 46773fb5dc7f_adding_user_table.py  daff23253894_adding_user_shops_relationship.py  e7ff97c10b8f_adding_user_roles_association_table.py  fab2a86c8b63_adding_user_shops.py
server/app/: bgtasks.py  main.py  settings.py
server/app/api/: apirouter.py
server/app/api/v1/: v1_router.py  v1router.py
server/app/api/v1/dependencies/: auth.py  or_404.py
server/app/api/v1/routes/: auth.py  me.py  roles.py  shops.py  users.py
server/app/db/: initdb.py  initdb.yaml  session.py
server/app/enums/: logenums.py  roleenums.py  userenums.py
server/app/exceptions/: apiexceptions.py
server/app/messages/: apimsg.py  rolemsgs.py  usermsgs.py
server/app/models/: __init__.py  rolemodels.py  scrapermodels.py  shopmodels.py  tokenmodels.py  usermodels.py
server/app/models/meta/: pydanticbase.py  pydanticmixins.py  pydantictypes.py  sqlalchemybase.py  sqlalchemymixins.py  sqlalchemytypes.py
server/app/service/: emailservice.py  roleservice.py  scraperservice.py  shopservice.py  tokenservice.py  userservice.py
server/app/static/email-templates/html/: verify-account.html
server/scripts/: lint.sh  test.sh
server/tests/: common.py  conftest.py  factories.py  test_initdb.py
server/tests/api/: overrides.py  test_healthcheck.py
server/tests/api/v1/: conftest.py  test_auth.py  test_me.py  test_shops.py  test_users.py
server/tests/service/: test_roleservice.py  test_shopservice.py  test_tokenservice.py  test_userservice.py
(+157 files in other folders)
